<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.github.kklisura.cdt</groupId>
    <artifactId>ctd-java-client-root</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>ctd-java-client-root</name>
    <description>Chrome DevTools java client</description>
    <url>https://github.com/kklisura/chrome-devtools-java-client</url>

    <modules>
        <module>cdt-protocol-parser</module>
        <module>cdt-java-protocol-builder</module>
        <module>cdt-java-client</module>
        <module>cdt-examples</module>
    </modules>

    <licenses>
        <license>
            <name>The Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>Kenan Klisura</name>
            <email>kklisura@hotmail.com</email>
        </developer>
    </developers>

    <organization>
        <name>Kenan Klisura</name>
        <url>https://kklisura.com</url>
    </organization>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.inceptionYear>2018</project.inceptionYear>
        <argLine></argLine>

        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>

        <java.parser.core.version>3.5.11</java.parser.core.version>
        <jackson.version>2.19.4</jackson.version>
        <apache.collections.version>4.1</apache.collections.version>
        <apache.lang3.version>3.7</apache.lang3.version>
        <lombok.version>1.18.46</lombok.version>
        <logback.version>1.2.3</logback.version>
        <args4j.version>2.33</args4j.version>
        <google.java.format.version>1.5</google.java.format.version>

        <junit.jupiter.version>5.11.4</junit.jupiter.version>
        <mockito.version>5.14.2</mockito.version>
        <jacoco.version>0.8.14</jacoco.version>
        <easy.mock.version>5.6.0</easy.mock.version>
        <jsonassert.version>1.5.3</jsonassert.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.junit</groupId>
                <artifactId>junit-bom</artifactId>
                <version>${junit.jupiter.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-bom</artifactId>
                <version>${mockito.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.5.5</version>
                    <configuration>
                        <argLine>@{argLine} -XX:+EnableDynamicAgentLoading</argLine>
                        <systemPropertyVariables>
                            <net.bytebuddy.experimental>true</net.bytebuddy.experimental>
                        </systemPropertyVariables>
                    </configuration>
                </plugin>
                <plugin>
                    <!-- This plugin is also present in cdt-java-client, so be sure to copy any changes here to that module as well -->
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>license-maven-plugin</artifactId>
                    <version>2.0.0</version>
                    <executions>
                        <execution>
                            <id>update-file-header</id>
                            <goals>
                                <goal>update-file-header</goal>
                            </goals>
                            <phase>process-sources</phase>
                        </execution>
                        <execution>
                            <id>attach-licenses</id>
                            <goals>
                                <goal>update-project-license</goal>
                                <goal>add-third-party</goal>
                            </goals>
                        </execution>
                    </executions>
                    <configuration>
                        <outputDirectory>${project.basedir}</outputDirectory>
                        <canUpdateCopyright>true</canUpdateCopyright>
                        <failOnMissing>true</failOnMissing>
                        <licenseName>apache_v2</licenseName>
                        <useMissingFile>true</useMissingFile>
                        <excludes>
                            <exclude>**/*.json</exclude>
                        </excludes>
                        <roots>
                            <root>src/main/java</root>
                            <root>src/test</root>
                        </roots>
                        <licenseMerges>
                            <licenseMerge>The Apache Software License, Version 2.0|Apache License, Version 2.0|Apache
                                Public License 2.0|Apache 2|Apache 2.0|Apache License 2.0|Apache License
                            </licenseMerge>
                            <licenseMerge>Eclipse Public License v1.0|Eclipse Public License 1.0|Eclipse Public License
                                - v 1.0
                            </licenseMerge>
                            <licenseMerge>BSD 3-Clause License|BSD|New BSD License</licenseMerge>
                            <licenseMerge>Dual license consisting of the CDDL v1.1 and GPL v2|CDDL+GPL</licenseMerge>
                        </licenseMerges>
                    </configuration>
                </plugin>
                <plugin>
                    <!-- This plugin is also present in cdt-java-client, so be sure to copy any changes here to that module as well -->
                    <groupId>com.coveo</groupId>
                    <artifactId>fmt-maven-plugin</artifactId>
                    <version>2.9.1</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>format</goal>
                            </goals>
                            <phase>process-sources</phase>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
